Fix: loan button fix on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -24,5 +24,8 @@ input[type='radio']:checked:before {
   gap: 8px;
 }
 .LoanSliderTrack {
-  width: 120% !important; 
+  width: 105% !important; 
+}
+.loanSliderMark {
+  bottom: 27%;
 }
